--- a/othernames.html
+++ b/othernames.html
@@ -67,7 +67,7 @@
                 <h5>03.05.23 <a href="music/Beginning/030523.mp3" blank >Beginning</a></h5>
                 <h5>02.07.23 <a href="music/Alone/020723.mp3" blank >Alone</a></h5>
 
-    <br><br><h2>as <mark>Kenfucky Fried Children</mark></h2>
+    <br><br><h2>as <mark>Kentucky Fried Children</mark></h2>
            <br>
 gotte get to these ones
     <br><br><h2>as <mark>Irfan</mark></h2>
