--- a/chron.html
+++ b/chron.html
@@ -40,6 +40,8 @@
             <h5>05.24.25 <a href="music/Rain Part One/052425.mp3">Rain [pt 1]</a></h5>
             <h5>05.04.25 <a href="music/Sad Cat/050425.wav">Sad Cat</a></h5>
             I made this for a video phoebe made which will eventually go in the trees section
+            <h5>04.08.25 <a href="music/secret things/Kate/040825.mp3">Kate [LOCKED]</a></h5>
+            <h5>04.07.25 <a href="music/secret things/Kate/040725.mp3">Kate [LOCKED]</a></h5>
             <h5>04.03.25 <a href="music/Control/040325.mp3">Control</a></h5>
             <h5>04.02.25 <a href="music/Cigarettes/040225.mp3">Cigarettes</a></h5>
             <h5>03.23.25 <a href="music/Free/032325.mp3">Free</a></h5>
@@ -48,6 +50,7 @@
             <h5>02.24.25 <a href="music/All For/022425.mp3">All For [alternate]</a></h5>
             <h5>02.23.25 <a href="music/All For/022325.mp3">All For [alternate]</a></h5>
             <h5>02.17.25 <a href="music/secret things/All For/021725.mp3">All For [LOCKED]</a></h5>
+            <h5>02.17.25 <a href="music/Kate/021725.mp3">Kate</a></h5>
             <h5>02.12.25 <a href="music/Cigarettes/021225.mp3">Cigarettes</a></h5>
             <h5>01.06.25 <a href="music/Offices/010625 2.mp3">Offices</a></h5>
             <h5>01.06.25 <a href="music/All For/010625.mp3">All For [tape]</a></h5>
@@ -70,6 +73,7 @@
             <h5>12.06.24 <a href="music/B2nes/120624.mp3" blank >B2ne Deo</a></h5>
             <h5>12.05.24 <a href="music/Keep Me Warm/120524.mp3" blank >Keep Me Warm/Truth</a></h5>
             <h5>12.05.24 <a href="music/Truth/120524.mp3" blank >Truth/Born In The West</a></h5>
+            <h5>11.28.24 <a href="music/Kate/112824.mp3" blank >Kate</a></h5>
             <h5>09.02.24 <a href="https://wrenkennison.bandcamp.com/album/eye-balls-and-windows" blank >Eye Balls and Windows [Bandcamp]</a></h5>
             <h5>08.22.24 <a href="music/covers/Slow Dancing/082224.mp3">Slow Dancing</a> [<a href="https://genius.com/Lindsey-buckingham-slow-dancing-lyrics" blank >Lindsey Buckingham</a>]</h5>
             <h5>08.21.24 <a href="music/Untitled/082124.mp3">Untitled</a> [<a href="https://genius.com/Fleetwood-mac-big-love-lyrics" blank >Fleetwood Mac</a>]</h5>
@@ -141,10 +145,10 @@
             <p>
                 <h5>08.08.23 <a href="music/covers/A Cruel Angel's Thesis/080823.mp3" blank >A Cruel Angel's Thesis</a> [<a href="https://genius.com/Genius-romanizations-yoko-takahashi-a-cruel-angels-thesis-romanized-lyrics" blank >Yoko Takahashi</a>]</h5>
                 <h5>07.24.23 <a href="music/Untitled/072423.mp3" blank >Untitled</a></h5>
-                <h5>05.29.24 <a href="music/Gnomecore/gnomecore 3.mp3">Gnomecore [part 3]</a></h5>
-                <h5>05.29.24 <a href="music/Together Waltz/gnomecore 2.mp3">Gnomecore [part 2] / Togetherwaltz</a></h5>
+                <h5>05.29.23 <a href="music/Gnomecore/gnomecore 3.mp3">Gnomecore [part 3]</a></h5>
+                <h5>05.29.23 <a href="music/Together Waltz/gnomecore 2.mp3">Gnomecore [part 2] / Togetherwaltz</a></h5>
                 stole melody from 'life' which was in turn stolen by togetherwaltz
-                <h5>05.29.24 <a href="music/Gnomecore/gnomecore 1.mp3">Gnomecore [part 1]</a></h5>
+                <h5>05.29.23 <a href="music/Gnomecore/gnomecore 1.mp3">Gnomecore [part 1]</a></h5>
                 <h5>05.27.23 <a href="music/Nitwit/052723.mp3" blank >Nitwit</a></h5>
                 <h5>05.27.23 <a href="music/Untitled/052723.mp3" blank >Untitled</a></h5>
                 <h5>05.26.23 <a href="music/Forest/052623.mp3" blank >Forest</a></h5>
